Fix: thin scrollbar

--- a/webapp/channels/src/sass/components/_post.scss
+++ b/webapp/channels/src/sass/components/_post.scss
@@ -644,6 +644,7 @@
             padding: 13px 16px 12px 16px;
             background-color: var(--center-channel-bg);
             overflow: auto;
+            scrollbar-width: thin;
 
             &.custom-textarea--emoji-picker {
                 padding-right: 50px;
